fix: remove transition to fix jumpy behavior at 0 seconds

--- a/src/Styles/Clock.css
+++ b/src/Styles/Clock.css
@@ -44,8 +44,6 @@
 }
 
 .hand {
-  transition: all 0.05s;
-  transition-timing-function: ease-in;
   position: absolute;
   width: 50%;
   height: 2px;
